# 2.1

./: Practicum_2.1_Opdrachten.ipynb  pyproject.toml
